--- a/src/html/elements/footer.html
+++ b/src/html/elements/footer.html
@@ -9,20 +9,16 @@
       <form action="#" method="post" class="footer__form">
         <ul class="form__list">
          <li>
-           <label for="name" aria-label="required" class="form__element--label">Name: </label>
-            <input type="text" id="name" name="user_name" placeholder="Name" required class="form__element" minlength="2" maxlength="30">
+            <input type="text" id="name" name="user_name" aria-label="Name" placeholder="Name" required class="form__element" minlength="2" maxlength="30">
           </li>
           <li>
-            <label for="email" aria-label="required" class="form__element--label">E-mail: </label>
-            <input type="email" id="mail" name="user_email" placeholder="Email address" required class="form__element" minlength="6" maxlength="30">
+            <input type="email" id="mail" name="user_email" aria-label="Email" placeholder="Email address" required class="form__element" minlength="6" maxlength="30">
           </li>
           <li>
-            <label for="subject" aria-label="required" class="form__element--label">Subject: </label>
-            <input type="text" id="subject" name="user_subject" placeholder="Subject" required class="form__element" maxlength="80">
+            <input type="text" id="subject" name="user_subject" aria-label="Subject" placeholder="Subject" required class="form__element" maxlength="80">
           </li>
           <li>
-            <label for="message" aria-label="required" class="form__element--label">Message: </label>
-            <textarea id="message" name="user_message" placeholder="Your  message" required class="form__element form__textarea" maxlength="300"></textarea>
+            <textarea id="message" name="user_message" aria-label="Message" placeholder="Your  message" required class="form__element form__textarea" maxlength="300"></textarea>
           </li>
           <li class="form__element">
             <button type="submit" class="form__button">send message</button>
