--- a/src/html/elements/header.html
+++ b/src/html/elements/header.html
@@ -5,19 +5,39 @@
     <div class="header__ribbon"><img src="../images/ribbon.png" alt=""  class="header__ribbon--image"></div>
     <div class="header__slider">
       <div class="header__slides">
-<!--             <img srcset="car-1-w320.jpg 320w,
-        car-1-480w.jpg 480w,
-        car-1-800w.jpg 800w,
-        car-1-1100w.jpg 1100w"
-sizes="(max-width: 320px) 320px,
-       (max-width: 480px) 480px,
-       (max-width: 800px) 800px,
-       1100px"
-src="images/photos/car-1-1100w.jpg" alt="Man standing nearby the old style car in the foreground of small town located on the slope of the hill."
-class="header__slide header__slide--active"> -->
-        <img src="images/photos/car-1-w1100.jpg" alt="Man standing nearby the old style car in the foreground of small town located on the slope of the hill." class="header__slide header__slide--active">
-        <img src="images/photos/car-2-w1100.jpg" alt="Front of the old style cabriolet roadster." class="header__slide header__slide--next">
-        <img src="images/photos/car-3-w1100.jpg" alt="Old style ambulance in front of the building." class="header__slide">
+        <img srcset="images/photos/car-1-320w.jpg 320w,
+                     images/photos/car-1-480w.jpg 480w,
+                     images/photos/car-1-800w.jpg 800w,
+                     images/photos/car-1-1100w.jpg 1100w"
+          sizes="(max-width: 320px) 320px,
+                 (max-width: 480px) 480px,
+                 (max-width: 800px) 800px,
+                 1100px"
+          src="images/photos/car-1-800w.jpg" 
+          alt="Man standing nearby the old style car in the foreground of small town located on the slope of the hill."
+          class="header__slide header__slide--active">
+        <img srcset="images/photos/car-2-320w.jpg 320w,
+                     images/photos/car-2-480w.jpg 480w,
+                     images/photos/car-2-800w.jpg 800w,
+                     images/photos/car-2-1100w.jpg 1100w"
+          sizes="(max-width: 320px) 320px,
+                 (max-width: 480px) 480px,
+                 (max-width: 800px) 800px,
+                 1100px"
+          src="images/photos/car-2-w1100.jpg" 
+          alt="Front of the old style cabriolet roadster."
+          class="header__slide header__slide--next">
+        <img srcset="images/photos/car-3-320w.jpg 320w,
+                     images/photos/car-3-480w.jpg 480w,
+                     images/photos/car-3-800w.jpg 800w,
+                     images/photos/car-3-1100w.jpg 1100w"
+          sizes="(max-width: 320px) 320px,
+                 (max-width: 480px) 480px,
+                 (max-width: 800px) 800px,
+                 1100px"
+          src="images/photos/car-1-1100w.jpg" 
+          alt="Old style ambulance in front of the building."
+          class="header__slide">
         <div class="slider__navigation">
           <button type="button" class="slider__button slider__button--previous">&lt;</button>
           <button type="button" class="slider__button slider__button--next">&gt;</button>
