--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,7 +14,7 @@
   <body>
     @@include('./elements/navigation.html')
     @@include('./elements/header.html')
-    <a class="up-button" tabindex="1"><img src="images/arrow-up.svg" alt="" class="up-button__image"></a>
+    <a class="up-button" aria-label="Go up"><img src="images/arrow-up.svg" alt="" class="up-button__image"></a>
     @@include('./elements/main.html')
     @@include('./elements/footer.html')
   </body>
